#1493: Improve reroute performance and add some tests
By: DerFrZocker <derrieple@gmail.com>